# app/Http/Controllers/GreetController.php
@@ -8,47 +8,47 @@ use Illuminate\Http\Request;
 class GreetController extends Controller
 {
     /**
-    * @OA\Get(
-    *   path="/api/greet",
-    *   tags={"greeting"},
-    *   summary="Returns a Sample API response",
-    *   description="A sample greeting to test out the API",
-    *   operationId="greet",
-    *   @OA\Parameter(
-    *       name="firstname",
-    *       description="nama depan",
-    *       required=true,
-    *       in="query",
-    *       @OA\Schema(
-    *           type="string"
-    *       )
-    *   ),
-    *   @OA\Parameter(
-    *       name="lastname",
-    *       description="nama belakang",
-    *       required=true,
-    *       in="query",
-    *       @OA\Schema(
-    *           type="string"
-    *       )
-    *   ),
-    *   @OA\Response(
-    *       response=200,
-    *       description="successful operation",
-    *       @OA\JsonContent(
-    *           example={
-    *               "success": true,
-    *               "message": "Berhasil memproses masukan user",
-    *               "data": {
-    *                   "output": "Hello John Doe",
-    *                   "firstname": "John",
-    *                   "lastname": "Doe"
-    *               }
-    *           }
-    *       ),
-    *   )
-    * )
-    */
+     * @OA\Get(
+     *   path="/api/greet",
+     *   tags={"Greeting"},
+     *   summary="Returns a Sample API response",
+     *   description="A sample greeting to test out the API",
+     *   operationId="greet",
+     *   @OA\Parameter(
+     *       name="firstname",
+     *       description="nama depan",
+     *       required=true,
+     *       in="query",
+     *       @OA\Schema(
+     *           type="string"
+     *       )
+     *   ),
+     *   @OA\Parameter(
+     *       name="lastname",
+     *       description="nama belakang",
+     *       required=true,
+     *       in="query",
+     *       @OA\Schema(
+     *           type="string"
+     *       )
+     *   ),
+     *   @OA\Response(
+     *       response=200,
+     *       description="successful operation",
+     *       @OA\JsonContent(
+     *           example={
+     *               "success": true,
+     *               "message": "Berhasil memproses masukan user",
+     *               "data": {
+     *                   "output": "Hello John Doe",
+     *                   "firstname": "John",
+     *                   "lastname": "Doe"
+     *               }
+     *           }
+     *       ),
+     *   )
+     * )
+     */
     public function greet(Request $request)
     {
         $userData = $request->only([
