# resources/views/gallery/index.blade.php
@@ -8,8 +8,8 @@
             <div class="card">
                 <div class="card-header">Dashboard</div>
                 <div class="card-body">
-                    <div class="row">
-                        @if (count($galleries) > 0)
+                    <div class="row" id="gallery">
+                        {{-- @if (count($galleries) > 0)
                             @foreach ($galleries as $gallery)
                                 <div class="col-sm-2">
                                     <div>
@@ -27,10 +27,41 @@
                         @endif
                         <div class="d-flex">
                             {{ $galleries->links() }}
-                        </div>
+                        </div> --}}
+
+                        <!-- Konten akan diisi oleh script -->
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <script>
+        $(document).ready(function() {
+            $.get('http://localhost:8000/api/gallery', function(response) {
+            console.log('Response dari API:', response);
+            if (response['data']) {
+                var html = '';
+                response['data'].forEach(function(gallery) {
+                    html += `
+                        <div class="col-sm-2">
+                            <div>
+                                <a class="example-image-link" href="/storage/images/books/${gallery.picture}" data-lightbox="roadtrip" data-title="${gallery.description}">
+                                    <img class="example-image img-fluid mb-2" src="/storage/images/books/${gallery.picture}" alt="${gallery.title}" width="200" />
+                                </a>
+                            </div>
+                        </div>`;
+                });
+                console.log('HTML yang akan dimasukkan:', html);
+                $('#gallery').html(html);
+            } else {
+                $('#gallery').html('<h3>Tidak ada data.</h3>');
+            }
+            }).fail(function() {
+                console.error('Gagal memuat data dari API.');
+                $('#gallery').html('<h3>Gagal memuat data dari API.</h3>');
+            });
+        });
+    </script>
 @endsection
